# bharataddress

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  india-address-parser-blueprint.md  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit
bharataddress/: __init__.py  _geocode_cache.py  batch.py  cli.py  digipin.py  enrichment.py  formatter.py  geocoder.py  language.py  parser.py  phonetic.py  pincode.py  preprocessor.py  similarity.py  validator.py
bharataddress/data/: abbreviations.json  localities.json  pincodes.json  (+2 more)
docs/: COMPETITOR_BENCHMARK.md  DIGIPIN_SPEC.md  issues-v0.4-multilingual.md  prd-bharataddress-v0.1.md  prd-v0.4-multilingual.md
private/: README.md
reports/: eval_competitor_v0.1.1.json  eval_v0.1.0.json  eval_v0.1.1.json  eval_v0.1.2.json  eval_v0.1.3.json  eval_v0.1.4.json  eval_v0.1.5.json  eval_v0.2.1.json  eval_v0.2.1b.json  eval_v0.2.1c.json  eval_v0.2.1d.json  eval_v0.2.1e.json  eval_v0.2.2.json  eval_v0.3.0.json  pincode_crosscheck.md
scripts/: build_gold_tier_b.py  build_pincode_centroids.py  build_pincode_data.py  crosscheck_pincodes.py  eval_competitor.py  evaluate.py
tests/: test_batch.py  test_cli_transliterate.py  test_digipin.py  test_en_regression_gate.py  test_enrichment.py  test_evaluate_per_language.py  test_formatter.py  test_geocoder.py  test_geocoder_online.py  test_language_mapping.py  test_no_comma.py  test_no_indic_dep.py  test_no_network_v04.py  test_parse.py  test_phonetic.py  test_similarity.py  test_transliteration.py  test_validator.py  test_vernacular_coverage.py
(+10 files in other folders)
